--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.314.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-loading-skeleton": "^3.3.1",
