--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
     "scope": "/",
     "start_url": "/",
     "name": "Hunt4Taste",
-    "short_name": "H4T",
+    "short_name": "Hunt4Taste",
     "description": "La tua cantina a portata di TAP!",
     "icons": [
         {
