added functionality and splash page

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
     "theme_color": "#8B487E",
     "background_color": "#F8F8F8",
     "display": "standalone",
-    "scope": "/",
+    "scope": "/",  
     "start_url": "/",
     "name": "Hunt4Taste",
     "short_name": "Hunt4Taste",
@@ -14,7 +14,7 @@
             "type": "image/png"
         },
         {
-            "src": "/icon-256x256.png",
+            "src": "/icon-256x256.png",  
             "sizes": "256x256",
             "type": "image/png"
         },
@@ -26,6 +26,48 @@
         {
             "src": "/icon-512x512.png",
             "sizes": "512x512",
+            "type": "image/png"
+        }
+    ],
+    "splash_pages": [
+        {
+            "src": "/splash-1242x2208.png",
+            "sizes": "1242x2208",
+            "type": "image/png"
+        },
+        {
+            "src": "/splash-1125x2436.png",
+            "sizes": "1125x2436",
+            "type": "image/png" 
+        },
+        {
+            "src": "/splash-828x1792.png",
+            "sizes": "828x1792",
+            "type": "image/png"
+        },
+        {
+            "src": "/splash-1242x2688.png",
+            "sizes": "1242x2688",
+            "type": "image/png"
+        },
+        {
+            "src": "/splash-1536x2048.png",
+            "sizes": "1536x2048",
+            "type": "image/png" 
+        },
+        {
+            "src": "/splash-1668x2224.png",
+            "sizes": "1668x2224",
+            "type": "image/png"
+        },
+        {
+            "src": "/splash-1668x2388.png",
+            "sizes": "1668x2388",
+            "type": "image/png"
+        },
+        {
+            "src": "/splash-2048x2732.png",
+            "sizes": "2048x2732",
             "type": "image/png"
         }
     ]
