--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^5.0.1",
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.21.3",
+    "react-transition-group": "^4.4.5",
     "stripe": "^14.14.0",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.5",
