--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "theme_color": "#8B487E",
-    "background_color": "#F8F8F8",
+    "background_color": "#000000",
     "display": "standalone",
     "scope": "/",  
     "start_url": "/",
