added language function to product

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.21.3",
     "react-transition-group": "^4.4.5",
+    "react-world-flags": "^1.6.0",
     "stripe": "^14.14.0",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.5",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/node": "20.11.5",
+    "@types/react-world-flags": "^1.4.5",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
